samples/_failures_safe/1761371138_112b59_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_436d41fd.c: In function ‘main’:
./samples/SAFE/__tmp_436d41fd.c:142:5: error: expected expression at end of input
  142 |     if (
      |     ^~
./samples/SAFE/__tmp_436d41fd.c:142:5: error: expected declaration or statement at end of input
